Update asset locations for deployment

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/asciinema-player.css" />
+  <link rel="stylesheet" type="text/css" href="/css/asciinema-player.css" />
 
   {{if hasmath}} {{insert head_katex.html }}     {{end}}
   {{if hascode}} {{insert head_highlight.html }}   {{end}}
@@ -76,7 +76,7 @@
 <header class="titlebar"><p style="display: inline-block">BinaryBuilder</p></header>
 <div class="intro">
 <p>Build native binaries for 13 platforms in minutes. See how.</p>
-<asciinema-player src="/304105.cast" cols="100" rows="27" start-at
+<asciinema-player src="/assets/304105.cast" cols="100" rows="27" start-at
 =28 poster="npt:0:28" preload=1></asciinema-player>
 
 <div style="display: flex; justify-content: space-between; width:60%; padding-top: 1em; padding-bottom: 0.3em;">
