Update js location too

--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -5,6 +5,6 @@
     {{ if hascode }}
         {{ insert foot_highlight.html }}
     {{ end }}
-    <script src="/asciinema-player.js"></script>
+    <script src="/libs/asciinema/asciinema-player.js"></script>
   </body>
 </html>
