Minor spelling and grammar fixes

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -94,7 +94,7 @@
         <tr><td style="width:50%"/><td><b>Toolchains</b></td><td>45 well maintained toolchains for major platforms</td><td style="width:50%"/></tr>
         <tr><td style="width:50%"/><td><b>Sandbox<b/></td><td>All the tools you need in one isolated Linux environment</td><td style="width:50%"/></tr>
         <tr><td style="width:50%"/><td><b>Audit<b/></td><td>Automated analysis finds common mistakes</td><td style="width:50%"/></tr>
-        <tr><td style="width:50%"/><td><b>Wizard<b/></td><td>An interactive environemnt simplifies authoring</td><td style="width:50%"/></tr>
+        <tr><td style="width:50%"/><td><b>Wizard<b/></td><td>An interactive environment simplifies authoring</td><td style="width:50%"/></tr>
     </table>
 </div>
 
@@ -111,7 +111,7 @@
     </div>
     <div class="element">
         <h5>Just tarballs</h5>
-        <p>BinaryBuilder output is just a tarball. Grab the one for you ABI and go. No root or special tools required!</p>
+        <p>BinaryBuilder output is just a tarball. Grab the one for your ABI and go. No root or special tools required!</p>
     </div>
 </div>
 <div class="highlight-row">
@@ -121,7 +121,7 @@
     </div>
     <div class="element">
         <h5>Sensible defaults</h5>
-        <p>If you're build system is simple, our defaults will probably work for you.</p>
+        <p>If your build system is simple, our defaults will probably work for you.</p>
     </div>
     <div class="element">
         <h5>Experience</h5>
