Add cross-platform consistency, suggested by Stefan

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -131,6 +131,10 @@
         <p>We've shipped millions of binaries this way. Where possible we've automated our learnings to help improve your binaries.</p>
     </div>
     <div class="element">
+        <h5>Cross-platform consistency</h5>
+        <p>You can build for several platforms using the same toolchain, getting consistent binaries across all target systems.</p>
+    </div>
+    <div class="element">
         <h5>Community-driven</h5>
         <p>Build recipes for hundreds of packages are already available in the community buildtree, <a href="https://github.com/JuliaPackaging/Yggdrasil/">Yggdrasil</a>.</p>
     </div>
