Bring back short description

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -87,6 +87,9 @@
 
 </div>
 <div class="watdis">
+    <p style="text-align: center; margin: 10px 0 10px 0;">
+    BinaryBuilder lets you build native binaries for C, C++ and Fortran applications and libraries for all major platforms.
+    </p>
     <table class="features">
         <tr><td style="width:50%"/><td><b>Toolchains</b></td><td>45 well maintained toolchains for major platforms</td><td style="width:50%"/></tr>
         <tr><td style="width:50%"/><td><b>Sandbox<b/></td><td>All the tools you need in one isolated Linux environment</td><td style="width:50%"/></tr>
@@ -108,7 +111,7 @@
     </div>
     <div class="element">
         <h5>Language support</h5>
-        <p>BinaryBuilder lets you build native binaries for C, C++, Fortran, Rust and Go applications and libraries.</p>
+        <p>Build native binaries for your C, C++, Fortran, Rust and Go packages.</p>
     </div>
 </div>
 <div class="highlight-row">
