Mention that we build for multiple platforms with a single script

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -103,7 +103,7 @@
 <div class="highlight-row">
     <div class="element">
         <h5>OS Support</h5>
-        <p>BinaryBuilder produces binaries for Linux, macOS, Windows and FreeBSD.</p>
+        <p>BinaryBuilder produces binaries for Linux, macOS, Windows and FreeBSD with a single script.</p>
     </div>
     <div class="element">
         <h5>CPU support</h5>
