--- a/_layout/head.html
+++ b/_layout/head.html
@@ -82,7 +82,7 @@
 <div style="display: flex; justify-content: space-between; width:60%; padding-top: 1em; padding-bottom: 0.3em;">
 <a class="waves-effect waves-light btn-large grey" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Source</a>
 <a class="waves-effect waves-light btn-large grey" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Get Started</a>
-<a class="waves-effect waves-light btn-large grey" href="https://juliapackaging.github.io/BinaryBuilder.jl/stable">Documentation</a>
+<a class="waves-effect waves-light btn-large grey" href="https://juliapackaging.github.io/BinaryBuilder.jl/dev/">Documentation</a>
  </div>
 
 </div>
@@ -93,7 +93,7 @@
     <table class="features">
         <tr><td style="width:50%"/><td><b>Toolchains</b></td><td>45 well maintained toolchains for major platforms</td><td style="width:50%"/></tr>
         <tr><td style="width:50%"/><td><b>Sandbox<b/></td><td>All the tools you need in one isolated Linux environment</td><td style="width:50%"/></tr>
-        <tr><td style="width:50%"/><td><b>Audit<b/></td><td>Automated analysis finds common mistakes</td><td style="width:50%"/></tr>
+        <tr><td style="width:50%"/><td><b>Audit<b/></td><td>Automated analysis finds and fixes common mistakes</td><td style="width:50%"/></tr>
         <tr><td style="width:50%"/><td><b>Wizard<b/></td><td>An interactive environment simplifies authoring</td><td style="width:50%"/></tr>
     </table>
 </div>
@@ -103,18 +103,22 @@
 <div class="highlight-row">
     <div class="element">
         <h5>OS Support</h5>
-        <p>BinaryBuilder produces binaries for Linux, OS X, Windows and FreeBSD.</p>
+        <p>BinaryBuilder produces binaries for Linux, macOS, Windows and FreeBSD with a single script.</p>
     </div>
     <div class="element">
         <h5>CPU support</h5>
         <p>BinaryBuilder supports x86, ARM, AArch64, PowerPC. Automatically!</p>
     </div>
     <div class="element">
-        <h5>Just tarballs</h5>
-        <p>BinaryBuilder output is just a tarball. Grab the one for your ABI and go. No root or special tools required!</p>
+        <h5>Language support</h5>
+        <p>Build native binaries for your C, C++, Fortran, Rust and Go packages.</p>
     </div>
 </div>
 <div class="highlight-row">
+    <div class="element">
+        <h5>Just tarballs</h5>
+        <p>BinaryBuilder output is just a tarball. Grab the one for your ABI and go. No root or special tools required!</p>
+    </div>
     <div class="element">
         <h5>Hints</h5>
         <p>Common build systems are automatically detected. The wizard will give you the right command.</p>
@@ -123,9 +127,19 @@
         <h5>Sensible defaults</h5>
         <p>If your build system is simple, our defaults will probably work for you.</p>
     </div>
+</div>
+<div class="highlight-row">
     <div class="element">
         <h5>Experience</h5>
         <p>We've shipped millions of binaries this way. Where possible we've automated our learnings to help improve your binaries.</p>
+    </div>
+    <div class="element">
+        <h5>Cross-platform consistency</h5>
+        <p>You can build for several platforms using the same toolchain, getting consistent binaries across all target systems.</p>
+    </div>
+    <div class="element">
+        <h5>Community-driven</h5>
+        <p>Build recipes for hundreds of packages are already available in the community buildtree, <a href="https://github.com/JuliaPackaging/Yggdrasil/">Yggdrasil</a>.</p>
     </div>
 </div>
 </div>
