--- a/_layout/head.html
+++ b/_layout/head.html
@@ -76,8 +76,8 @@
 <header class="titlebar"><p style="display: inline-block">BinaryBuilder</p></header>
 <div class="intro">
 <p>Build native binaries for 13 platforms in minutes. See how.</p>
-<asciinema-player src="/assets/304105.cast" cols="100" rows="27" start-at
-=28 poster="npt:0:28" preload=1></asciinema-player>
+<asciinema-player src="/assets/304105.cast" cols="100" rows="27
+poster="npt:0:1" start-at=1 preload=1 speed=1.5></asciinema-player>
 
 <div style="display: flex; justify-content: space-between; width:60%; padding-top: 1em; padding-bottom: 0.3em;">
 <a class="waves-effect waves-light btn-large grey" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Source</a>
