--- a/_layout/head.html
+++ b/_layout/head.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/asciinema-player.css" />
 
   {{if hasmath}} {{insert head_katex.html }}     {{end}}
@@ -13,137 +12,23 @@
   <link rel="stylesheet" href="/css/franklin.css">
   {{isdef title}} <title>{{fill title}}</title>  {{end}}
   <style>
-    .titlebar {
-        background-color: black;
-        color: rgba(255, 255, 255, 0.85);
-        text-align: center;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .intro {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: rgba(255, 255, 255, 0.85);
-        background-color: #A51C30;
-        padding-top: 0.4em;
-        padding-bottom: 1em;
-    };
-    .row {
-        display: flex;
-        flex-direction: row;
-    }
-    .watdis {
-        padding-top: 0.5em;
-        padding-bottom: 0.75em;
-        padding-left: 12.5%;
-        padding-right: 12.5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 0.8rem;
-        background-color: #E8E8E8;
-    }
-    table.features: {
-        padding-left: 12.5%;
-        padding-right: 12.5%;
-    }
-    table.features {
-        table-layout: auto;
-    }
-    table.features tr, table.features td {
-        border: none;
-        white-space:nowrap;
-        border-collapse: collapse;
-    }
-    .element {
-        max-width: 30%
-    }
-    .highlight-row {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+
   </style>
 </head>
 <body>
 
-<header class="titlebar"><p style="display: inline-block">BinaryBuilder</p></header>
-<div class="intro">
-<p>Build native binaries for 13 platforms in minutes. See how.</p>
-<asciinema-player src="/assets/304105.cast" cols="100" rows="27
-poster="npt:0:1" start-at=1 preload=1 speed=1.5></asciinema-player>
+  <header class="titlebar">
+      <h1>BinaryBuilder</h1>
+  </header>
+  <div class="intro">
+      <p>Build native binaries for 13 platforms in minutes. See how.</p>
+  <asciinema-player src="/assets/304105.cast" cols="100" rows="27
+  poster="npt:0:1" start-at=1 preload=1 speed=1.5></asciinema-player>
 
-<div style="display: flex; justify-content: space-between; width:60%; padding-top: 1em; padding-bottom: 0.3em;">
-<a class="waves-effect waves-light btn-large grey" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Source</a>
-<a class="waves-effect waves-light btn-large grey" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Get Started</a>
-<a class="waves-effect waves-light btn-large grey" href="https://juliapackaging.github.io/BinaryBuilder.jl/dev/">Documentation</a>
- </div>
+  <div style="display: flex; justify-content: space-between; width:40%; padding-top: 1em; padding-bottom: 0.3em;">
+    <a class="pure-button button-red" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Source</a>
+    <a class="pure-button button-red" href="https://juliapackaging.github.io/BinaryBuilder.jl/dev/">Documentation</a>
+   </div>
+  </div>
 
-</div>
-<div class="watdis">
-    <p style="text-align: center; margin: 10px 0 10px 0;">
-    BinaryBuilder lets you build native binaries for C, C++ and Fortran applications and libraries for all major platforms.
-    </p>
-    <table class="features">
-        <tr><td style="width:50%"/><td><b>Toolchains</b></td><td>45 well maintained toolchains for major platforms</td><td style="width:50%"/></tr>
-        <tr><td style="width:50%"/><td><b>Sandbox<b/></td><td>All the tools you need in one isolated Linux environment</td><td style="width:50%"/></tr>
-        <tr><td style="width:50%"/><td><b>Audit<b/></td><td>Automated analysis finds and fixes common mistakes</td><td style="width:50%"/></tr>
-        <tr><td style="width:50%"/><td><b>Wizard<b/></td><td>An interactive environment simplifies authoring</td><td style="width:50%"/></tr>
-    </table>
-</div>
-
-<div class="franklin-content">
-
-<div class="highlight-row">
-    <div class="element">
-        <h5>OS Support</h5>
-        <p>BinaryBuilder produces binaries for Linux, macOS, Windows and FreeBSD with a single script.</p>
-    </div>
-    <div class="element">
-        <h5>CPU support</h5>
-        <p>BinaryBuilder supports x86, ARM, AArch64, PowerPC. Automatically!</p>
-    </div>
-    <div class="element">
-        <h5>Language support</h5>
-        <p>Build native binaries for your C, C++, Fortran, Rust and Go packages.</p>
-    </div>
-</div>
-<div class="highlight-row">
-    <div class="element">
-        <h5>Just tarballs</h5>
-        <p>BinaryBuilder output is just a tarball. Grab the one for your ABI and go. No root or special tools required!</p>
-    </div>
-    <div class="element">
-        <h5>Hints</h5>
-        <p>Common build systems are automatically detected. The wizard will give you the right command.</p>
-    </div>
-    <div class="element">
-        <h5>Sensible defaults</h5>
-        <p>If your build system is simple, our defaults will probably work for you.</p>
-    </div>
-</div>
-<div class="highlight-row">
-    <div class="element">
-        <h5>Experience</h5>
-        <p>We've shipped millions of binaries this way. Where possible we've automated our learnings to help improve your binaries.</p>
-    </div>
-    <div class="element">
-        <h5>Cross-platform consistency</h5>
-        <p>You can build for several platforms using the same toolchain, getting consistent binaries across all target systems.</p>
-    </div>
-    <div class="element">
-        <h5>Community-driven</h5>
-        <p>Build recipes for hundreds of packages are already available in the community buildtree, <a href="https://github.com/JuliaPackaging/Yggdrasil/">Yggdrasil</a>.</p>
-    </div>
-</div>
-</div>
-
-
-</div>
 <!-- Content appended here -->
