--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -2,17 +2,11 @@
     DEFAULT FONT AND LAYOUT
 ================================================================== */
 
-html {
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
     font-family: 'Quattrocento', Serif;
     font-size: 16px;
 }
-
-p {
-    font-family: 'Quattrocento', Serif;
-    font-size: 16px;
-}
-
-
 
 /* ==================================================================
     FOOT / COPYRIGHT
@@ -130,15 +124,13 @@ p {
     IMAGES in CONTENT
 ================================================================== */
 
-.franklin-content img {
+/* .franklin-content img {
     width: 70%;
     text-align: center;
-    padding-left: 10%; }
+    padding-left: 0; } */
 
 .franklin-content .img-small img {
-    width: 30%;
-    vertical-align: top;
-    padding-bottom: 60px;
+    height: 5em;
     padding-left: 0;  }
 
 /* ==================================================================
@@ -164,7 +156,6 @@ body { counter-reset: eqnum; }
 ================================================================== */
 
 .franklin-content code {
-    /* background-color: rgba(27,31,35,0.05); /*#f6f8fa;*/ */
     padding: 0.1em 0.2em;
     border-radius: 2px;
     font-size: 90%; }
@@ -219,34 +210,28 @@ return{c:[{cN:"metaj",b:/^julia>/,r:10,starts:{e:/^(?![ ]{6})/,sL:"julia"},alias
     font-family: 'Oswald', sans-serif; font-size: 24px;
 }
 .intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     color: rgba(0, 0, 0, 0.85);
     padding-top: 0.4em;
     padding-bottom: 1em;
     background-color: #d8d8d8;
-};
-.row {
-    display: flex;
-    flex-direction: row;
 }
+.center {
+    justify-content: center;
+}
+.buttons {
+    padding-top: 2em;
+    padding-bottom: 1em;
+}
+
 .watdis {
     padding-top: 1.5em;
     padding-bottom: 0.75em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
-
-.element {
-    max-width: 30%
+.watdis div p {
+    padding-right: 2em;
 }
-.highlight-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.features div p {
+    padding-right: 2em;
 }
 
 .button-red {
