update docs link

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -35,7 +35,7 @@
       <a class="pure-button button-red" href="https://github.com/JuliaPackaging/BinaryBuilder.jl">Source</a>
     </div>
     <div class="pure-u-1-2 buttons">
-      <a class="pure-button button-red" href="https://juliapackaging.github.io/BinaryBuilder.jl/dev/">Documentation</a>
+      <a class="pure-button button-red" href="https://docs.binarybuilder.org/stable/">Documentation</a>
     </div>
    </div>
   </div>
